--- a/src/main/resource/db.properties
+++ b/src/main/resource/db.properties
@@ -3,4 +3,5 @@ jdbc.url=jdbc:mysql:///diary?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=
 jdbc.password=
 jdbc.maxActive=10
+jdbc.minIdle=1
 jdbc.maxIdle=5
